# MarketSimulator

./: .gitignore  CMakeLists.txt  README.md
data/: synth_gen.py  synthetic_ticks.csv
include/market_replay/: common.hpp  csv_parser.hpp  dispatcher.hpp  event.hpp  interfaces.hpp  latency_model.hpp  logger.hpp  metrics.hpp  order_book.hpp  strategy.hpp
include/market_replay/utils/: blocking_queue.hpp
src/: gui_main.cpp  main.cpp
src/core/: dispatcher.cpp  latency_model.cpp  order_book.cpp
src/io/: csv_parser.cpp
src/strategy/: basic_strategy.cpp
src/utils/: common.cpp  metrics.cpp
tests/: CMakeLists.txt  test_blocking_queue.cpp  test_common.cpp  test_csv_parser.cpp  test_latency_model.cpp  test_main.cpp  test_utils.hpp
